Wed Mar 27 04:44:48 2002  Akinori MUSHA  <knu@iDaemons.org>

	* file.c (rb_file_s_expand_path): Do not free the pointer obtained
	  from getenv().

Tue Mar 26 14:08:11 2002  okabe katsuyuki <HGC02147@nifty.ne.jp>

	* win32/mkexports.rb: support VC++.NET.

Mon Mar 25 19:30:25 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in (arg_config): get rid of single quotes
	  for autoconf 2.53.

	* ext/extmk.rb.in (arg_config): should use Shellwords::shellwords.

Mon Mar 25 13:24:20 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (bsock_do_not_rev_lookup_set): should not be
	  allowed when $SAFE > 3.

Mon Mar 25 11:32:21 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* dln.c (dln_argv0): unused unless USE_DLN_A_OUT.

	* ext/digest: add depend files.

	* ext/syslog: ditto.

Sun Mar 24 12:19:09 2002  Koji Arai  <jca02266@nifty.ne.jp>

	* dir.c (fnmatch): "*/bar" (with FNM_PATHNAME flag) does not
	  match "foo/bar".

Sat Mar 23 01:50:30 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (read_all): files on /proc filesystem with zero stat size,
	  may have contents.

Fri Mar 22 15:04:03 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (exec_under): changing ruby_class is OK, but should not
	  alter cbase.

	* eval.c (yield_under_i): ditto.

Fri Mar 22 14:32:14 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb: Protocol#start should return self.

Wed Mar 20 22:08:51 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (is_defined): label forgotten.

Wed Mar 20 20:46:36 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* win32/config.status.in: RUBY_SO_NAME had been changed long long
	  ago.

Wed Mar 20 16:24:49 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: workaround for autoconf 2.53.

Wed Mar 20 00:46:54 2002  Akinori MUSHA  <knu@iDaemons.org>

	* dir.c (my_getcwd): the content of buf is uncertain and must not
	  be printed when getcwd(buf, size) has failed.
